--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,8 @@ body {
   height: 100%;
 }
 /* You can add global styles to this file, and also import other style files */
+
+// Ensure dialog panel has white background on all browsers
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  background-color: #ffffff !important;
+}
